# JADA

./: .clang-format  CMakeLists.txt  README.md
app/: 2d_stencil.cpp  CMakeLists.txt  comm.hpp  communicator.hpp  hpx_test.cpp  partition.hpp  print.hpp  slices.hpp  solve.hpp  stencil.hpp
cmake/: ExternalBoost.cmake  ExternalHpx.cmake
lib/: CMakeLists.txt
lib/algorithms/: CMakeLists.txt  get_slice.hpp  put_slice.hpp
lib/communication/: CMakeLists.txt  communicator.hpp  hpx_md_communicator.hpp  md_communicator.hpp  md_communicator_base.hpp  mock_md_communicator.hpp
lib/concepts/: callable.hpp  indexable.hpp  iterable.hpp  iterator.hpp  scalar.hpp
lib/containers/: container_element_type.hpp  dimension_handle.hpp  distributed_data.hpp  field.hpp  halo_offsets.hpp  md_array.hpp  md_indexable.hpp  md_view.hpp  partitioned_vector.hpp  region.hpp  soa.hpp  structured_data.hpp  structured_data_subsets.hpp  structured_data_view.hpp
lib/grid/: CMakeLists.txt  block.hpp  block_neighbours.hpp  block_topology.hpp  boundary.hpp  boundary_condition.hpp  boundary_conditions.hpp  boundary_partition.hpp  create_partition.hpp  data.hpp  decomposition.hpp  direction.hpp  domain.hpp  grid.hpp  grid_base.hpp  grid_dimensions.hpp  grid_loops.hpp  local_global_mapping.hpp  md_view.hpp  neighbours.hpp  orientation.hpp  partition.hpp  point.hpp  split.hpp  splitting_policy.hpp  splitting_policy_min_diff.hpp  subdomain.hpp  tile.hpp  tile_apply.hpp  tile_collection.hpp  tiled_data.hpp  uniform_grid.hpp
lib/loops/: CMakeLists.txt  dimension.hpp  direction.hpp  flatten_index.hpp  index_generator.hpp  index_pair_generator.hpp  index_type.hpp  iterator_set.hpp  loopable.hpp  md_index_loops.hpp  md_range_indices.hpp  neighbour_iterator.hpp  paired_md_index_loops.hpp  position.hpp  position_set.hpp  positions_to_iterators.hpp  segment.hpp  serial_index_loops.hpp  storage_order.hpp  unflatten_index.hpp
lib/operation/: CMakeLists.txt  apply_stencil_operation.hpp  boundary_location.hpp  fdm_boundary_operation.hpp  fdm_derivative.hpp  fdm_operations.hpp  field.hpp  operation.hpp  stencil_operation.hpp
lib/stencil/: CMakeLists.txt  apply_stencil.hpp  apply_stencil_pvec.hpp  compute_padding.hpp  create_interior_regions.hpp  create_parallel_regions.hpp  iterative_stencil_loop.hpp  op_to_iterators.hpp  stencil_indices.hpp  stencil_picker.hpp  stencil_shape.hpp
lib/type_traits/: has_add.hpp  has_add_assign.hpp  has_arithmetic_ops.hpp  has_comparison_ops.hpp  has_divide.hpp  has_divide_assign.hpp  has_equal.hpp  has_multiply.hpp  has_multiply_assign.hpp  has_not_equal.hpp  has_subtract.hpp  has_subtract_assign.hpp  is_field.hpp  is_h5_convertible.hpp  is_mpi_convertible.hpp  is_scalar.hpp  is_valid_element_type.hpp
lib/utils/: array_cast.hpp  array_op_overloads.hpp  can_throw.hpp  constexpr_functions.hpp  container_element_type.hpp  math_vector.hpp  math_vector_base.hpp  permutations.hpp  runtime_assert.hpp  tuple_to_array.hpp
src/: CMakeLists.txt
src/1DHeatSerial/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  catch_hpx_main.cpp  ops.hpp  test_communication.cpp  test_concepts.cpp  test_containers.cpp  test_containers_parallel.cpp  test_grid.cpp  test_loops.cpp  test_operation.cpp  test_operation_parallel.cpp  test_stencil.cpp  test_stencil_parallel.cpp  test_utils.cpp
